# AutoDRIVE

./: CLONE.md  LICENSE  README.md  TODO.md
.github/workflows/: main.yml
1. Vehicle/2. Electrical/: Pin Assignment.txt
ADSS Toolkit/autodrive_cpp/: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh  run_f1tenth.sh  run_nigel.sh
ADSS Toolkit/autodrive_cpp/src/: autodrive.cpp  autodrive.hpp  example.cpp  example_f1tenth.cpp  example_nigel.cpp
ADSS Toolkit/autodrive_py/: README.md  autodrive.py  example.py  example_f1tenth.py  example_nigel.py
ADSS Toolkit/autodrive_ros/: README.md
ADSS Toolkit/autodrive_ros/autodrive_f1tenth/: CMakeLists.txt  package.xml  setup.py
ADSS Toolkit/autodrive_ros/autodrive_f1tenth/autodrive_f1tenth/: __init__.py  bridge.py  config.py
ADSS Toolkit/autodrive_ros/autodrive_f1tenth/launch/: simulator_bringup_headless.launch  simulator_bringup_rviz.launch  simulator_teleop.launch
ADSS Toolkit/autodrive_ros/autodrive_f1tenth/rviz/: simulator.rviz
ADSS Toolkit/autodrive_ros/autodrive_f1tenth/scripts/: server.py  teleop.py
ADSS Toolkit/autodrive_ros/autodrive_nigel/: CMakeLists.txt  package.xml  setup.py
ADSS Toolkit/autodrive_ros/autodrive_nigel/autodrive_nigel/: bridge.py  config.py
ADSS Toolkit/autodrive_ros/autodrive_nigel/config/: common_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planner_params.yaml
ADSS Toolkit/autodrive_ros/autodrive_nigel/include/: lidar_odometry.h
ADSS Toolkit/autodrive_ros/autodrive_nigel/launch/simulator/: simulator_amcl.launch  simulator_bringup_headless.launch  simulator_bringup_rviz.launch  simulator_hector_slam.launch  simulator_lidar_odometry.launch  simulator_navigation.launch  simulator_teleop.launch
ADSS Toolkit/autodrive_ros/autodrive_nigel/launch/testbed/: testbed_amcl.launch  testbed_amcl_remote.launch  testbed_hector_slam.launch  testbed_hector_slam_remote.launch  testbed_lidar_odometry.launch  testbed_lidar_odometry_remote.launch  testbed_navigation.launch  testbed_navigation_goal.launch  testbed_navigation_remote.launch  testbed_teleop.launch  testbed_teleop_remote.launch
ADSS Toolkit/autodrive_ros/autodrive_nigel/maps/: README.md  bedroom.pgm  living_room.pgm  living_room.yaml  parking_school_imperfect_simulator.pgm  parking_school_obstacles_simulator.yaml  parking_school_perfect_simulator.pgm  parking_school_perfect_simulator.yaml  parking_school_testbed.yaml
ADSS Toolkit/autodrive_ros/autodrive_nigel/rviz/simulator/: simulator.rviz  simulator_amcl.rviz  simulator_hector_slam.rviz  simulator_lidar_odometry.rviz  simulator_navigation.rviz
ADSS Toolkit/autodrive_ros/autodrive_nigel/rviz/testbed/: testbed_lidar_odometry.rviz  testbed_navigation.rviz
ADSS Toolkit/autodrive_ros/autodrive_nigel/scripts/: nav_ctrl.py  nav_goal.py  server.py  teleop.py
ADSS Toolkit/autodrive_ros/autodrive_nigel/src/: adss.cpp  lidar_odometer.cpp  lidar_odometry.cpp  scss.cpp
ADSS Toolkit/autodrive_ros2/: README.md
Assets/Effects/: BurnoutSmoke.mat  SkidTrail.mat
Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  FoliageDiffusionProfile.asset  HDRenderPipelineGlobalSettings.asset
Assets/Materials/: 7_Segment_Display_OFF.mat  7_Segment_Display_ON.mat  Amber_LED_OFF.mat  Amber_LED_ON.mat  Asphalt.mat  Box_White.mat  Cone_Orange.mat  Cone_White.mat  Default.mat  Dirt.mat  Driving School Map.mat  Fine Plane Mesh-_defaultMat.mat  Floor.mat  Floor_Beige.mat  Floor_Dark.mat  Floor_Light.mat  Green_LED_OFF.mat  Green_LED_ON.mat  Lane_Marking.mat  Lawn.mat  Red_LED_OFF.mat  Red_LED_ON.mat  Red_LED_Partially_ON.mat  Skybox.mat  Snow.mat  Transparent.mat  Water.mat  Waypoint.mat  White_LED_OFF.mat  White_LED_ON.mat  defaultMat.mat
Assets/Models/: 3-Way Intersection.skp  4-Way Intersection.skp  Construction Box.skp  Curved Road.skp  Dead End.skp  Lawn.skp  Parking Lot.skp  Roadside Parking.skp  Straight Road.skp
Assets/Off-Road Terrain/: Readme.asset
Assets/PostProcessingProfile/: Bird's Eye.asset  Driver's Eye.asset  Front Camera.asset  God's Eye.asset  Rear Camera.asset
Assets/Prefabs/: Cautionary Sign.prefab  Construction Box.prefab  Give Way Sign.prefab  Informatory Sign.prefab  Regulatory Sign.prefab  Stop Sign.prefab  Traffic Cone.prefab  Traffic Light.prefab
Assets/Render Textures/: Vehicle 1 Front Camera.renderTexture  Vehicle 1 Rear Camera.renderTexture  Vehicle Front Camera.renderTexture  Vehicle Rear Camera.renderTexture
Assets/Rendering Settings/: HDRP Profile.asset  HDRP Settings - Full-Scale.asset  HDRP Settings - Small-Scale.asset  HDRP Settings.asset  HQ HDRP Settings - City.asset  HQ HDRP Settings - Full-Scale.asset  HQ HDRP Settings - Mid-Scale.asset  HQ HDRP Settings - Small-Scale.asset  LQ HDRP Settings - City.asset  Lighting Settings.lighting  Post-Processing Profile.asset  Scene Settings Profile.asset  UQ HDRP Settings - City.asset  UQ HDRP Settings - Full-Scale.asset  UQ HDRP Settings - Mid-Scale.asset  UQ HDRP Settings - Small-Scale.asset
Assets/Scenes/: Deformable Terrain.unity  Driving School.unity  F1TENTH - Digital Twin MARL.unity  F1TENTH - MARL.unity  F1TENTH.unity  Hunter SE - CBF.unity  Hunter SE - Data Collection.unity  Hunter SE - New.unity  Hunter SE - PID.unity  Hunter SE.unity  Husky - New.unity  Husky.unity  Parking School - Imperfect.unity  Parking School - Perfect.unity  Parking School.unity  RZR - Multi-Camera.unity  RZR - VSR.unity  RZR.unity  Testing School - Optimized.unity  Testing School.unity  VSR - Multi-Camera Data Recording.unity
Assets/Scripts/: AbstractTargetFollower.cs  AntiRollBar.cs  AutoMeshDeformer.cs  AutomobileController.cs  (+49 more)
Documents/: BOM.xlsx
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset
SCSS Toolkit/: README.md
autodrive_cpp/: CMakeLists.txt  README.md  run.sh
autodrive_cpp/src/: autodrive.cpp
autodrive_py/: README.md  autodrive.py
autodrive_ros/: README.md
(+3497 files in other folders)
