<?xml version="1.0"?>
<package format="2">
  
  <name>autodrive_f1tenth</name>
  <version>0.1.0</version>
  <description>AutoDRIVE Ecosystem ROS Package for F1TENTH</description>

  <maintainer email="tsamak@clemson.edu">Tanmay Vilas Samak</maintainer>
  <maintainer email="csamak@clemson.edu">Chinmay Vilas Samak</maintainer>

  <license>BSD</license>

  <url type="repository">https://autodrive-ecosystem.github.io</url>
  <url type="repository">https://github.com/Tinker-Twins/AutoDRIVE</url>
  <url type="bugtracker">https://github.com/Tinker-Twins/AutoDRIVE/issues</url>

  <author email="tsamak@clemson.edu">Tanmay Vilas Samak</author>
  <author email="csamak@clemson.edu">Chinmay Vilas Samak</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>